--- a/package.json
+++ b/package.json
@@ -8,5 +8,24 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "~1.17.1",
+    "chart.js": "^2.6.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "express-flash": "0.0.2",
+    "express-session": "^1.15.5",
+    "hbs": "~4.0.1",
+    "mongoose": "^4.11.7",
+    "morgan": "~1.8.1",
+    "multer": "^1.3.0",
+    "nodemailer": "^4.1.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "popper.js": "^1.12.3",
+    "serve-favicon": "~2.4.2"
+  }
 }
